[package]
name = "hamst"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
edition = "2018"
description = "Hash Array Mapped Shareable Trie"
repository = "https://github.com/vincenthz/rs-hamst/"
keywords = [ "HAMT", "Multi-thread", "Shareable" ]
categories = [ "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
