[package]
name = "hamst"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/vincenthz/rs-hamst/"
repository = "https://github.com/vincenthz/rs-hamst/"
description = "Hash Array Mapped Shareable Trie"
keywords = [ "HAMT", "Multi-thread", "Shareable" ]
categories = [ "data-structures" ]
edition = "2018"


[dependencies]

[dev-dependencies]
smoke = "0.3"
smoke-macros = "0.1"
#quickcheck = "0.9"
#quickcheck_macros = "0.9"
