[package]
name = "hamst"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/vincenthz/rs-hamst/"
repository = "https://github.com/vincenthz/rs-hamst/"
description = "Hash Array Mapped Shareable Trie"
keywords = [ "HAMT", "Multi-thread", "Shareable" ]
categories = [ "data-structures" ]
edition = "2024"


[dependencies]

[dev-dependencies]
smoke = "0.4"
smoke-macros = "0.4"
